--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "grunt-sed": "twbs/grunt-sed#v0.2.0",
     "load-grunt-tasks": "~3.2.0",
     "time-grunt": "~1.2.0"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.6",
+    "jquery": "^1.9.1"
   }
 }
