--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "scripts": {
     "start": "electron dist/template-app",
-    "build": "grunt"
+    "build": "grunt",
+    "test": "jest --coverage"
   },
   "license": "MIT",
   "devDependencies": {
@@ -38,6 +39,7 @@
     "grunt-html": "~5.0.0",
     "grunt-jekyll": "~0.4.2",
     "grunt-sed": "twbs/grunt-sed#v0.2.0",
+    "jest-cli": "^13.2.3",
     "load-grunt-tasks": "~3.2.0",
     "time-grunt": "~1.2.0"
   },
