--- a/.travis.yml
+++ b/.travis.yml
@@ -30,3 +30,8 @@ install:
 
 matrix:
   fast_finish: true
+
+script:
+- |
+    npm test
+    cat ./coverage/lcov.info | ./node_modules/.bin/coveralls
