fix coveralls path

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,4 +34,4 @@ matrix:
 script:
 - |
     npm test
-    cat ./coverage/lcov.info | ./node_modules/.bin/coveralls
+    cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
