--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "coveralls": "^2.11.11",
     "electron-prebuilt": "^0.36.0",
     "grunt": "~0.4.5",
     "grunt-banner": "~0.5.0",
