--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "grunt-sed": "twbs/grunt-sed#v0.2.0",
     "jest-cli": "^13.2.3",
     "load-grunt-tasks": "~3.2.0",
+    "nconf": "^0.7.2",
     "time-grunt": "~1.2.0"
   },
   "dependencies": {
