--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "scripts": {
     "start": "electron dist/template-app",
     "build": "grunt",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "package": "electron-packager ./dist/template-app IDC-OP-INTERFACE --all --out ~/Desktop/SoundMachine --version 0.36.0 --overwrite --icon=./dist/template-app/img/app-icon/app-icon.icns"
   },
   "license": "MIT",
   "devDependencies": {
     "coveralls": "^2.11.11",
+    "electron-packager": "^5.0.1",
     "electron-prebuilt": "^0.36.0",
     "grunt": "~0.4.5",
     "grunt-banner": "~0.5.0",
